# rock-paper-scissors-c

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  app  game  game.c  run.sh
.github/workflows/: cmake-multi-platform.yml
app.dSYM/Contents/Resources/DWARF/: app
assets/: round.txt  splash.txt
include/: file_io.h  game.h  name_manager.h  players.h
save/: game_history.txt
src/: ai_model.py  file_io.c  game.c  hash_map.py  main.c  name_manager.c  players.c
